Fixes #228 - Expands dialogs to fill viewport on small screens. Inserts proper title into repeat section dialog.

--- a/frontend/src/stardrive_material.scss
+++ b/frontend/src/stardrive_material.scss
@@ -315,4 +315,53 @@
   .margin-bottom-none, .row.margin-bottom-none  { margin-bottom: 0px; }
   .ghost { opacity: 0; }
 
+  // XS
+  @media (max-width: 575px) {
+    .cdk-overlay-pane {
+      width: 100%;
+      height: 100%;
+    }
+
+    mat-dialog-container.mat-dialog-container {
+      border-radius: 0;
+    }
+  }
+
+  // SM
+  @media (min-width: 576px) {
+    .cdk-overlay-pane {
+      width: 90%;
+      height: 90%;
+    }
+  }
+
+  // MD
+  @media (min-width: 768px) {
+    .cdk-overlay-pane {
+      width: 75%;
+      height: 75%;
+    }
+  }
+
+  // LG
+  @media (min-width: 992px) {
+    .cdk-overlay-pane {
+      width: 75%;
+      height: 75%;
+    }
+  }
+
+  // XL
+  @media (min-width: 1200px) {
+    .cdk-overlay-pane {
+      width: 75%;
+      height: 75%;
+    }
+  }
+
+
+  .mat-dialog-content[mat-dialog-content] {
+    max-height: 85vh;
+  }
+
 }
